5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1836_2602.log
== TEST (2019-06-26 22:18:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array([[],[],[]]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:48:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ"))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print(r)
-- ERROR:
File "XXXX", line 6
    mat = ([[2,1,4]
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:49:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ")))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print(r)
-- ERROR:
File "XXXX", line 6
    mat = ([[2,1,4]
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:49:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:51:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(mat,xyz.T)

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:52:25) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:52:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:52:57) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:53:24) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:53:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:54:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 07:54:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:27:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:28:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)

print(a)
print(b)
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 08:28:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)


print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:08:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)


print(r)
-- EXECUTION TIME:
0.979251
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 4, in <module>
    xyz = input(array(eval(input())))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:09:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)


print(r)
-- EXECUTION TIME:
1.1206
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 4, in <module>
    xyz = input(array(eval(input())))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:09:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])
a = inv(mat)
b = xyz.T
r = dot(inv(mat),xyz.T)


print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:15:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("abacate: ", round(r[0], 1))
print("banana: ", round(r[1], 1))
print("caqui: ", round(r[2], 1))

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:15:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:15:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:15:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:16:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:47:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:47:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = input(array(eval(input("XYZ:"))))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))
print ("asaaaaaaaaaaaaa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:51:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

#if r[0] == min[r]:
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:51:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4]
        [1,2,0]
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

#if r[0] == min[r]:
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:51:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4],
        [1,2,0],
        [2,3,4]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

#if r[0] == min[r]:
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:52:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4],
        [1,2,0],
        [2,3,2]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

#if r[0] == min[r]:
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:35:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4],
        [1,2,0],
        [2,3,2]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min[r]:
	print("estafilococo")
if r[1] == min[r]:
	print("salmonela")
elif:
	print("coli")
-- ERROR:
File "XXXX", line 20
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:36:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4],
        [1,2,0],
        [2,3,2]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min[r]:
	print("estafilococo")
if r[1] == min[r]:
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:36:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4],
        [1,2,0],
        [2,3,2]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min[r]:
	print("estafilococo")
if r[1] == min[r]:
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.04877
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 16, in <module>
    if r[0] == min[r]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:36:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4],
        [1,2,0],
        [2,3,2]])

r = dot(inv(mat),xyz.T)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min[r]:
	print("estafilococo")
if r[1] == min[r]:
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.03982
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 16, in <module>
    if r[0] == min[r]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:37:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = ([[2,1,4],
        [1,2,0],
        [2,3,2]])
v = xyz.T
r = dot(inv(mat),v)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min[r]:
	print("estafilococo")
if r[1] == min[r]:
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.868959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 16, in <module>
    if r[0] == min[r]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:37:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = array([[2,1,4],
        [1,2,0],
        [2,3,2]])
v = xyz.T
r = dot(inv(mat),v)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min[r]:
	print("estafilococo")
if r[1] == min[r]:
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.979148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 16, in <module>
    if r[0] == min[r]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:37:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = array([[2,1,4],
        [1,2,0],
        [2,3,2]])
v = xyz.T
r = dot(inv(mat),v)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min[r]:
	print("estafilococo")
if r[1] == min[r]:
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.1688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2602/main.py", line 16, in <module>
    if r[0] == min[r]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:37:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = array([[2,1,4],[1,2,0],[2,3,2]])
v = xyz.T
r = dot(inv(mat),v)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min[r]:
	print("estafilococo")
if r[1] == min[r]:
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:38:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = array([[2,1,4],[1,2,0],[2,3,2]])
v = xyz.T
r = dot(inv(mat),v)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
if r[1] == min(r):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.27318
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
XYZ:estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
XYZ:estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
coli
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
XYZ:estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:38:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = array([[2,1,4],[1,2,0],[2,3,2]])
v = xyz.T
r = dot(inv(mat),v)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:38:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = array([[2,1,4],[1,2,0],[2,3,2]])
v = xyz.T
r = dot(inv(mat),v)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.26142
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:38:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

xyz = array(eval(input("XYZ:")))

mat = array([[2,1,4],[1,2,0],[2,3,2]])
v = xyz.T
r = dot(inv(mat),v)

print("estafilococo: ", round(r[0], 1))
print("salmonela: ", round(r[1], 1))
print("coli: ", round(r[2], 1))

if r[0] == min(r):
	print("estafilococo")
elif r[1] == min(r):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.952364
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
